# mkdocs-edit

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_LICENSES.md  mkdocs.yml  package.json  playwright.config.js  pyproject.toml  requirements.txt  run_dev.py
.github/workflows/: ci.yml
app/: cli.py  main.py
app/static/: app.js  index.html  styles.css
docs/: index.md
tests/: test_upload.py
tests/e2e/: editor.spec.js
