[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-edit"
version = "0.1.0"
description = "Local editor UI for MkDocs projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "ruamel.yaml>=0.18.0",
  "python-multipart>=0.0.9",
  "mkdocs>=1.5.0",
]

[project.scripts]
mkdocs-edit = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]
